# warehouse

./: README.md  app.py  main.py  pyproject.toml
data/: repository_activity.csv
database/: repository_analytics.db
scripts/: seed_database.py
