[project]
name = "software-engineering-dashboard"
version = "0.1.0"
description = "Streamlit dashboard for analyzing developer count effectiveness and software project productivity."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
]
